Added Viswa's talk

--- a/content/2019-08.html
+++ b/content/2019-08.html
@@ -28,6 +28,15 @@ agenda:
         description: "Ashok Govindarajan is a SASTRA alumnus and finished his Engineering in ECE in 2000. He has hands-on experience in building and maintaining Wireless communication systems (Satellite, 2G, 4G) over the last 18 years. He is currently working on IoT-related wireless connectivity options like Bluetooth, WiFi and LoRa.He is interested in applied mathematics for algorithm development in wireless communications. Other areas of interest include signal processing and building models in Python to understand abstract concepts. Currently he holds the position of Technologist in Zilogic Systems, primarily looking at wireless testing and data science."
         image: "ashok-govindarajan.jpeg"
   -
+    time: "7:45"
+    title: "Moving to JS"
+    subtitle: "A gentle, but thorough introduction to write better JS. An exercise in uderstanding, why JS is different and how to make use of the differences."
+    speakers:
+      -
+        name: "Viswanath Chidambaram"
+        video_link: ""
+        description: "Viswanath writes JS for the past 15 years."
+  -
     time: "8:30"
     title: "Networking & Dinner"
 ---
