Using right image for Damodharan

--- a/content/2019-08.html
+++ b/content/2019-08.html
@@ -15,7 +15,7 @@ agenda:
         profile: "https://damo.js.org"
         video_link: ""
         description: "Damodharan works in Zoho Corp. as a frontend developer. He is passionate about mathematics and likes incorporating its concrete ideas in software development for producing robust and correct products."
-        image: "dani-akash.jpeg"
+        image: "damodharan.jpeg"
   -
     time: "7:00"
     title: "Probability essentials for Machine learning"
