Added the youtube urls

--- a/content/2019-09.html
+++ b/content/2019-09.html
@@ -3,13 +3,13 @@ start: 2019-09-26 18:00
 edition: 71
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/264949944/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqz1tEgay2g2XmskU1B43y8Q' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyUmsVxCpjD8HKkCiXoOogZ' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
     title: "Concurrency, Actor model and Akka"
     subtitle: "This talk would cover what an actor system is, what are the issues it addresses and how it shines in building effective asynchronous distributed systems. We would see some of its real-world applications and use a popular actor framework - Akka actor model. The session will have both theory and multiple demos."
-    video_link: ""
+    video_link: "https://www.youtube.com/watch?v=X4U8hlr6jzA"
     speakers:
       -
         name: "Ayushi Sharma"
@@ -20,7 +20,7 @@ agenda:
     time: "7:00"
     title: "How to orchestrate containers?"
     subtitle: "We all agree that containers are great. Can we run plain containers(say 2000) ? What are the problems ? How can we orchestrate ? Can we design the architecture of our own orchestrator and compare with Kubernetes, Nomad and docker-swarm."
-    video_link: ""
+    video_link: "https://www.youtube.com/watch?v=Y6M1r7dLVZk"
     speakers:
       -
         name: "Dinesh Balasubramanian"
