Updated Break timing

--- a/content/2019-11.html
+++ b/content/2019-11.html
@@ -18,6 +18,9 @@ agenda:
         image: "suresh_toyota.jpeg"
   -
     time: "7:00"
+    title: "Break"
+  -
+    time: "7:15"
     title: "Running Postgresql in Production"
     subtitle: "PostgreSQL is a stable workhorse powering many production systems. This talk will focus on some of the key internal aspects of how PostgreSQL works and how PostgreSQL can be tuned and optimized for large production workloads."
     video_link: ""
