updated 1st speaker company name in description

--- a/content/2019-11.html
+++ b/content/2019-11.html
@@ -14,7 +14,7 @@ agenda:
       -
         name: "Suresh KV"
         profile: "https://www.linkedin.com/in/suresh-venkatesan-5648073a"
-        description: "Suresh is an architect with Performance and Product Engineering experience. He has extensively worked on performance / scalability / availability aspects of the multi-tier systems with effective usage of tools. He likes to solve intriguing performance issues."
+        description: "Suresh is an architect at Toyota Connected India with Performance and Product Engineering experience. He has extensively worked on performance / scalability / availability aspects of the multi-tier systems with effective usage of tools. He likes to solve intriguing performance issues."
         image: "suresh_toyota.jpeg"
   -
     time: "7:00"
