--- a/content/2019-11.html
+++ b/content/2019-11.html
@@ -3,13 +3,13 @@ start: 2019-11-28 18:00
 edition: 72
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/266576881/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyUmsVxCpjD8HKkCiXoOogZ' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyhWn3JrzcshbjJuPKvQIiy' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
     title: "Resiliency with Istio"
     subtitle: "This talk would cover the  basics of istio as a service mesh and how it fits well with Kubernetes. It will then delve into the details of key istio rules to help build resilient microservices and how is it compared to Hystrix or Resilience4j frameworks. The session would also cover a working demo on circuit breaker."
-    video_link: ""
+    video_link: "https://youtu.be/5vVxXL8U43A"
     speakers:
       -
         name: "Suresh KV"
@@ -23,7 +23,7 @@ agenda:
     time: "7:15"
     title: "Running Postgresql in Production"
     subtitle: "PostgreSQL is a stable workhorse powering many production systems. This talk will focus on some of the key internal aspects of how PostgreSQL works and how PostgreSQL can be tuned and optimized for large production workloads."
-    video_link: ""
+    video_link: "https://youtu.be/bCjhFcQrno0"
     speakers:
       -
         name: "Jambunathan"
