Updated speaker name

--- a/content/2019-12.html
+++ b/content/2019-12.html
@@ -24,7 +24,7 @@ agenda:
     video_link: ""
     speakers:
       -
-        name: "Jawahar Babu"
+        name: "Jawahar"
         profile: "https://www.jawahar.tech/"
         description: "Jawahar is a Software Programmer who is passionate about learning new languages and frameworks. He has years of experience in building enterprise grade applications using various technologies. He is specifically interested in practicing functional programming with modern language features. He usually shares his learning through blog and talks."
         image: "jawahar-babu.jpg"
