Added speaker description and image

--- a/content/2019-12.html
+++ b/content/2019-12.html
@@ -13,7 +13,9 @@ agenda:
     speakers:
       -
         name: "Arun Prakash Murugesan"
-        profile: ""
+        description: "Arun Prakash is the CTO and founder of GUVI. As the head of engineering, Arun focuses on building products that bring out the creativity in all of us. Arun Holds his UG in B. Tech in Information technology. He started his professional career with Honeywell-Aerospace, KLA-Tencor - Semiconductor Automation, Kalido - Data warehousing, PayPal - Risk & Analytics and Symantec - Partner Engineering. With about 15 years of industry experience he focus on the technology behind the GUVI platform. His technical knowledge shared through Youtube channel ( share4guvi & reach2arunprakash ) has reached more than 2 Million viewers and his content has been inspirational for many. He was recently recognized as Youth Icon in IYONS international summit."
+        profile: "http://www.linkedin.com/in/arunprakashm"
+        image: "arunprakash.jpg"
   -
     time: "7:00"
     title: "Break"
