Updated the streaming links

--- a/content/2019-12.html
+++ b/content/2019-12.html
@@ -3,13 +3,13 @@ start: 2020-01-02 18:00
 edition: 73
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/267372945/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyhWn3JrzcshbjJuPKvQIiy' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyO9fWCf46apBi0Wwv4ol0g' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:15"
     title: "GraphQL & Graphene"
     subtitle: "Graphene - Python is a library for building GraphQL APIs in Python easily, its main goal is to provide a simple but extendable API for making developers' lives easier. But, what is GraphQL? Why we need it when we have rest? Why Mark-Zuckerberg said yes for introducing GraphQL?"
-    video_link: ""
+    video_link: "https://youtu.be/ZJhavUVn8mo"
     speakers:
       -
         name: "Arun Prakash Murugesan"
@@ -23,7 +23,7 @@ agenda:
     time: "7:15"
     title: "The power of Streams in NodeJS"
     subtitle: "Streams are Node’s best and most misunderstood idea. In this talk, I will try to explain the concept of streams as simple as possible. We also do live coding and solve some real time problems using streams."
-    video_link: ""
+    video_link: "https://youtu.be/4xiPRAAEh54"
     speakers:
       -
         name: "Jawahar"
