Updated Vinoth description and image

--- a/content/2020-01.html
+++ b/content/2020-01.html
@@ -17,12 +17,16 @@ agenda:
     title: "Break"
   -
     time: "7:15"
-    title: "DAPR - Microservices building block for Clud"
+    title: "DAPR - Microservices building block for Cloud"
     subtitle: "Dapr is an open-source, portable, event-driven runtime that makes it easy for developers to build resilient, microservice stateless and stateful applications that run on the cloud and edge. Dapr embraces the diversity of all programming languages and developer frameworks and simplifies building applications such as the e-commerce example.
     Dapr consists of a set of building blocks accessed by standard HTTP or gRPC APIs that can be called from any programming language. These building blocks empower all developers with proven, industry best practices and each building block is independent; you can use one, some, or all of them in your applications"
     speakers:
       -
-        name: "Vinoth | CADS Software India Pvt LTd"
+        name: "Vinoth | CADS Software India Pvt Ltd"
+        profile: "https://www.linkedin.com/in/vinoth247/"
+        description: "A passionate cloud Advocate"
+        image: "vinoth-rao.jpeg"
+
   -
     time: "8:00"
     title: "Networking & Dinner"
