Updated the speaker description for Karthikeyan

--- a/content/2020-01.html
+++ b/content/2020-01.html
@@ -12,6 +12,9 @@ agenda:
     speakers:
       -
         name: "Karthikeyan VK | Bot Code Technologies"
+        profile: "https://www.linkedin.com/in/karthikeyan-vk-27508254/"
+        description: "Karthikeyan VK is passionate about learning new technology to solve business and developer challenges. He conducts various workshops & Bootcamp on Microservices and DevOps. He is an expert in building highly scalable solutions with cloud-native architecture. He also has a huge experience in reducing your cloud cost.  He loves to talk about new technology in meetups and writes blogs on the last challenge he faced."
+        image: "karthikeyan.jpg"
   -
     time: "7:00"
     title: "Break"
