Updated the 75th edition talks

--- a/content/2020-02.html
+++ b/content/2020-02.html
@@ -7,15 +7,23 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/c
 agenda:
   -
     time: "6:15"
-    title: "TechRadar Vol.21 Walkthrough"
-    subtitle: "ThoughtWorks just released their most recent <a target='_blank' rel='noopener noreferrer' href='https://www.thoughtworks.com/radar'>Technology Radar, Vol. 21</a>. If you haven't seen it before, it's an interactive publication that explores the direction our industry is heading. We cover the cutting-edge techniques, tools, platforms and frameworks being developed today and discuss how to apply them to your own work.<br/>"
+    title: "How modern Recommendation systems work"
+    subtitle: "In this talk, we will help you understand how recommendation systems like Netflix, Amazon and Flipkart work. You will learn general ML based recommendation algorithms in plain English. Will implement one of the algorithm using Python and Pandas library."
     speakers:
       -
-        name: "Bharani Subramaniam | Market Tech Principal | Thoughtworks"
-        profile: "https://www.thoughtworks.com/profiles/bharani-subramaniam"
-        description: "Bharani, with 18 years of experience has been building applications since the late nineties, when he started his career as a VC++ win32 programmer. He is a connoisseur of various technologies but his passion lies in simplifying system designs. He also indulges in building strategies around data engineering and making the most of real time analytics for ThoughtWorks’ clients."
-        image: "bharanisubramaniam.jpeg"
-
+        name: "Shankar | Thoughtworks"
+      -
+        name: "Saravanakumar | Thoughtworks" 
+  -
+    time: "7:15"
+    title: "Break"
+  -
+    time: "7:30"
+    title: "Building a Minikube from Scratch"
+    subtitle: "Kubernetes, the container orchestration tool, has many components within it to run. When it comes to trying out a Kubernetes cluster locally, a tool called Minikube is widely used. Minikube abstracts the setting up of a full blown Kubernetes cluster components. This session will show what is inside the kube where a mini kubernetes cluster is built from a clean VM."
+    speakers:
+      -
+        name: "Aswin Kartik | Senior Consultant | Thoughtworks"
   -
     time: "8:00"
     title: "Networking & Dinner"
