--- a/content/2020-04.html
+++ b/content/2020-04.html
@@ -1,6 +1,7 @@
 ---
 start: 2020-04-30 18:00
 edition: 76
+isWebinar: true
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/270236625/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
 agenda:
