Added Raja to the talk

--- a/content/2020-06.html
+++ b/content/2020-06.html
@@ -15,6 +15,10 @@ agenda:
         profile: "https://in.linkedin.com/in/jeremyjackson-jjcseng"
         description: "An application developer with 2+ years of experience and a keen interest in Data Science and Engineering."
         image: "jeremy.jpeg"
+      -
+        name: "Rajagopal P S"
+        profile: "https://www.linkedin.com/in/rajagopalparthasarathi"
+        description: "Technology enthusiast at Thoughtworks"
   -
     time: "7:10"
     title: "What is Deno & Will it replace Node.js? "
