Modified speaker profile url

--- a/content/2020-08.html
+++ b/content/2020-08.html
@@ -12,7 +12,7 @@ agenda:
   speakers:
   -
     name: "Geethanjali Govindaraj"
-    profile: "www.linkedin.com/in/geethanjali-govindaraj-a09115b9"
+    profile: "https://www.linkedin.com/in/geethanjali-govindaraj-a09115b9"
     description: "An application developer with 5+ years of experience and currently working at ThoughtWorks."
     image: "Geethanjali.png"
   -
