Add resources for Mutation testing talk

--- a/content/2020-10.html
+++ b/content/2020-10.html
@@ -31,4 +31,11 @@ agenda:
       Worked in Java, R, Android with some smaller contributions in C, Golang etc.
       Apart from Application development, have also pursued skills in Mobile - apps & DevOps. "
       image: "vikhyath_choradia.jpg"
+  resources:
+    -
+      title: " 🖥 Slides"
+      url: "https://docs.google.com/presentation/d/1UfcuCaeluN0Sr0dch0UXER4K_PV74kOuKnI8sqBzI88/edit?usp=sharing"
+    -
+      title: " 💻 Code"
+      url: "https://github.com/vikytech/MutationTesting"
 ---
