Add youtube link for Mutation testing talk

--- a/content/2020-10.html
+++ b/content/2020-10.html
@@ -19,6 +19,7 @@ agenda:
 -
   time: "7:00"
   title: "Mutation Testing"
+  video_link: "https://youtu.be/nTTp8c1C8jA"
   subtitle: "Have you ever come across a unit test which passes even when it should technically fail?
   How can we test the effectiveness or quality of the tests we write?
   Is 100% code coverage a sufficient metric?
