86th Edition | Profile url changes

--- a/content/2021-03.html
+++ b/content/2021-03.html
@@ -25,7 +25,7 @@ agenda:
   speakers:
   -
     name: "Nithya N"
-    profile: "https://www.linkedin.com/in/sivakumar-palani-188a231a/"
+    profile: "https://www.linkedin.com/in/nithyanatarajan/"
     description: "I'm a passionate developer who likes challenges, especially the ones difficult to solve or not solved by many."
     image: "Nithya.png"
   -
