Edited 92nd  edition Jan-2022 streaming links

--- a/content/2022-01.html
+++ b/content/2022-01.html
@@ -9,7 +9,7 @@ agenda:
 -
   time: "6:00"
   title: "Improving Developer's Effectiveness with Developer Portal"
-  video_link: "https://www.youtube.com/c/GeekNightChennai"
+  video_link: "https://youtu.be/JVoUBAfE8GQ"
   subtitle: "To mitigate the complexities faced by the Engineers in a team, a centralized tool or portal is needed to improve the organizational and the developer’s effectiveness, one such solution is Backstage. Backstage, an Open Source developer portal with a plugin architecture to help expose all infrastructure products in one place, offering a coherent developer experience and a starting point for engineers to find the information they need."
   speakers:
   -
