--- a/content/2022-04.html
+++ b/content/2022-04.html
@@ -8,29 +8,18 @@ agenda:
 
 -
   time: "05:30"
-  title: "Introduction of Aerospike NoSQL database"
-  video_link: "https://www.youtube.com/watch?v=OzVw4rtsUDE"
-  subtitle: "In this session we will talk about the benefits of using Aerospike database, how the data is being stored and queried in Aerospike, advantage of using it and some hands on experience with Aerospike Database."
-  speakers:
-  -
-    name: "Atul Maheswari"
-    profile: "https://www.linkedin.com/in/atul-maheswari/"
-    description: "I am an enthusiastic learner and love to explore new technologies. I have an overall experience of almost 7 years and have hands-on experience on various tech stacks. I am very easily approachable as well so ping me for any tech talks or casual talks as well."
-    image: "Atul_Maheswari.jpeg"
--
-  time: "6:30"
   title: "Embeded Pipeline and Rust in Automotive"
-  video_link: "https://www.youtube.com/watch?v=OzVw4rtsUDE"
+  video_link: "https://youtu.be/Uk07XI8iRO8"
   subtitle: "To know about the Yocto project for building custom embedded Linux images for automotive hardware targets. Set up automatic build pipelines to build the Linux image. Test these images virtually using QEMU. Test these images on real-time hardware target by setting up continuous flashing and on board testing. For the sixth-year, Rust is the most loved language. Rust reigns supreme as most loved” - Stackoverflow . In this session, we will explore the use case of Rust in Scalable service-Oriented MiddlewarE over IP (SOME/IP) by building a sample application."
   speakers:
   -
     name: "Harish Kumar Balaji"
-    profile: ""
-    description: ""
+    profile: "https://www.linkedin.com/in/harishkumarbalaji/"
+    description: "Tech Enthusiast. Youtuber and Beatboxer. Technology driven problem solver. Keen on hardware and software based automation."
     image: "Harish_Kumar_Balaji.jpeg"
   -
     name: "Gnana Ganesh"
     profile: "https://www.linkedin.com/in/gnana-ganesh"
-    description: "Application developer in Thoughtworks. Rustacean. Currently working in Autonomous Vehicle space. Interested in solving problems"
+    description: "Application developer in Thoughtworks. Rustacean. Currently working in Autonomous Vehicle space. Interested in solving problems."
     image: "Gnana_Ganesh.jpeg"
 ---
