--- a/content/2022-09.html
+++ b/content/2022-09.html
@@ -6,7 +6,7 @@ participate: "https://www.meetup.com/chennai-geek-night/events/288475402/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
 agenda:
   - time: "05:00"
-    title: "Essence of Freshworks Developer Platfrom"
+    title: "Essence of Freshworks Developer Platform"
     subtitle: "Introduction to enterprise app building on the Freshworks Developer Platform, who uses them, and if you should build one. Bonus: Application development with Freshworks Development Kit/Freshworks SDK."
     speakers:
       - name: "Teja Kummarikuntla,(Developer Advocate, Freshworks)"
