Ram | Add. Talk titles for 98th edition

--- a/content/2024-08.html
+++ b/content/2024-08.html
@@ -1,17 +1,15 @@
 ---
 start: 2024-08-29 16:30
 edition: 98
-isWebinar: true
+isWebinar: false
 talk: "https://docs.google.com/forms/d/e/1FAIpQLScYXdhJqrAeN0KUm55aI7sGBpWO_z4ULKZ-56IFpHfHMza-Mw/viewform"
 agenda:
 -
   time: "06:30"
-  title: "Talk 1"
-  subtitle: "Stay tuned for more updates"
+  title: "Intuitive Product Discovery with Conversational AI in E-commerce"
 -
   time: "07:15"
-  title: "Talk 2"
-  subtitle: "Stay tuned for more updates"
+  title: "Anemic Domain Model Anti-pattern"
 -
   time: "8:00"
   title: "Networking & Dinner"
