Ram | Update. Speaker details for 98th edition

--- a/content/2024-08.html
+++ b/content/2024-08.html
@@ -7,9 +7,15 @@ agenda:
 -
   time: "06:30"
   title: "Intuitive Product Discovery with Conversational AI in E-commerce"
+  speakers:
+    -
+      name: "Samvardhan V G"
 -
   time: "07:15"
   title: "Anemic Domain Model Anti-pattern"
+  speakers:
+    -
+      name: "Sayeed Munawar Hussain"
 -
   time: "8:00"
   title: "Networking & Dinner"
