Ram | Update. Talk and Speaker details for 98th edition

--- a/content/2024-08.html
+++ b/content/2024-08.html
@@ -11,11 +11,11 @@ agenda:
     -
       name: "Samvardhan V G"
 -
-  time: "07:15"
-  title: "Anemic Domain Model Anti-pattern"
+  time: "07:10"
+  title: "Introduction to MongoDB, Replication and Sharding"
   speakers:
     -
-      name: "Sayeed Munawar Hussain"
+      name: "Keertthana K N"
 -
   time: "8:00"
   title: "Networking & Dinner"
