Ram | Update. registration details for 98th edition

--- a/content/2024-08.html
+++ b/content/2024-08.html
@@ -1,8 +1,9 @@
 ---
 start: 2024-08-29 16:30
 edition: 98
-isWebinar: false
+participate: "https://www.meetup.com/chennai-geek-night/events/302980649/?utm_medium=referral&utm_campaign=share-btn_savedevents_share_modal&utm_source=link"
 talk: "https://docs.google.com/forms/d/e/1FAIpQLScYXdhJqrAeN0KUm55aI7sGBpWO_z4ULKZ-56IFpHfHMza-Mw/viewform"
+subnote: "This event will be live streamed on <a  class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
 -
   time: "06:30"
