Ram | Update. speaker images for 98th edition

--- a/content/2024-08.html
+++ b/content/2024-08.html
@@ -11,12 +11,14 @@ agenda:
   speakers:
     -
       name: "Samvardhan V G"
+      image: "Samvardhan-V-G.png"
 -
   time: "07:10"
   title: "Introduction to MongoDB, Replication and Sharding"
   speakers:
     -
       name: "Keertthana K N"
+      image: "Keertthana-K-N.png"
 -
   time: "8:00"
   title: "Networking & Dinner"
