--- a/content/2024-08.html
+++ b/content/2024-08.html
@@ -3,18 +3,29 @@ start: 2024-08-29 16:30
 edition: 98
 participate: "https://www.meetup.com/chennai-geek-night/events/302980649/?utm_medium=referral&utm_campaign=share-btn_savedevents_share_modal&utm_source=link"
 talk: "https://docs.google.com/forms/d/e/1FAIpQLScYXdhJqrAeN0KUm55aI7sGBpWO_z4ULKZ-56IFpHfHMza-Mw/viewform"
-subnote: "This event will be live streamed on <a  class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqy6KV5JT1jj2zE0abhYc1F0' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
 -
-  time: "06:30"
+  time: "6:30"
+  title: "Why Geek Night?"
+-
+  time: "06:40"
   title: "Intuitive Product Discovery with Conversational AI in E-commerce"
+  video_link: "https://www.youtube.com/watch?v=RORm08H-j18&list=PLH8WPOo4hnqy6KV5JT1jj2zE0abhYc1F0&index=2"
+  subtitle: "The session is about on multimodal models and multimodal search, with a focus on using BLIP2 for feature extraction in both text and image embeddings.
+We'll explore how we can leverage multimodal capabilities for conversational search system for products in e-commerce."
   speakers:
     -
       name: "Samvardhan V G"
       image: "Samvardhan-V-G.png"
 -
-  time: "07:10"
+  time: "7:15"
+  title: "Break"
+-
+  time: "07:30"
   title: "Introduction to MongoDB, Replication and Sharding"
+  video_link: "https://www.youtube.com/watch?v=70YT5lp1KgU&list=PLH8WPOo4hnqy6KV5JT1jj2zE0abhYc1F0&index=2"
+  subtitle: "The session is an introduction to MongoDB and also going over the concepts of replication and sharding in MongoDB."
   speakers:
     -
       name: "Keertthana K N"
