Ram | Update. Talk and Speaker details for 99th edition

--- a/content/2024-09.html
+++ b/content/2024-09.html
@@ -23,13 +23,16 @@ We’ll cover the core concepts of Multi-AI Agent systems, dive into crewAI’s 
   title: "Break"
 -
   time: "07:00"
-  title: "Anemic Domain Model Anti-pattern"
+  title: "Optimising the Engineering Value Stream"
   video_link: "https://www.youtube.com/watch?v=Iwrfobj0xVQ&list=PLH8WPOo4hnqyx8RsnP5-xQNaxOBsTOebU"
-  subtitle: "A common OOPS anti-pattern that most of us would have seen/implemented and understand how to address it."
+  subtitle: "In this talk, we are going to take a step back and look at the broader process of delivering software to our customers and receiving
+feedback from them. We will break down this process into multiple phases, look at the practices that can improve efficiency in each of those phases,
+understand how to prioritise those practices, and how to make measurable progress overall."
   speakers:
     -
-      name: "Sayeed Munawar Hussain"
-      image: "Sayeed-Munawar-Hussain.png"
+      name: "Balaji Sivaraman"
+      image: "Balaji-Sivaraman.png"
+      profile: "https://www.linkedin.com/in/balajisivaraman/"
 -
   time: "7:45"
   title: "Networking & Dinner"
