Ram | Update. Talk and Speaker details for 99th edition

--- a/content/2024-09.html
+++ b/content/2024-09.html
@@ -19,21 +19,19 @@ We’ll cover the core concepts of Multi-AI Agent systems, dive into crewAI’s 
       name: "Antony Prince J"
       image: "Antony-Prince-J.png"
 -
-  time: "6:45"
+  time: "6:30"
   title: "Break"
 -
-  time: "07:00"
-  title: "Optimising the Engineering Value Stream"
+  time: "06:45"
+  title: 'Orchestrating workflows the "TEMPORAL" way'
   video_link: "https://www.youtube.com/watch?v=Iwrfobj0xVQ&list=PLH8WPOo4hnqyx8RsnP5-xQNaxOBsTOebU"
-  subtitle: "In this talk, we are going to take a step back and look at the broader process of delivering software to our customers and receiving
-feedback from them. We will break down this process into multiple phases, look at the practices that can improve efficiency in each of those phases,
-understand how to prioritise those practices, and how to make measurable progress overall."
+  subtitle: "In a distributed system there are inherent challenges in making data consistent across systems, handling retries , managing state between services, etc.
+Temporal provides a framework to solve these issues by abstracting out the complex orchestration logic and let developers and teams focus on the core business logic"
   speakers:
     -
-      name: "Balaji Sivaraman"
-      image: "Balaji-Sivaraman.png"
-      profile: "https://www.linkedin.com/in/balajisivaraman/"
+      name: "Aravind V Vaideesh"
+      image: "Aravind-V-Vaideesh.png"
 -
-  time: "7:45"
+  time: "7:15"
   title: "Networking & Dinner"
 ---
