Ram | Update. Talk description for 101st edition

--- a/content/2024-11.html
+++ b/content/2024-11.html
@@ -24,7 +24,7 @@ agenda:
   time: "07:00"
   title: 'Neo4j Essentials: Powering Al-Ready Graph Data'
   video_link: "https://www.youtube.com/watch?v=0_UCXFsZcIg&list=PLH8WPOo4hnqwpZNqV_s_uF5FwJA_vy83p"
-  subtitle: "As data relationships grow in complexity, graph databases like Neo4j are redefining how we structure and analyze connections. In this session, we’ll dive into the basics of Neo4j, explore a real-world comparison between SQL and graph approaches, and explore how Neo4j supports Generative AI. Join us to gain practical insights for enhancing data intelligence in your projects."
+  subtitle: "As data relationships grow in complexity, graph databases like Neo4j are redefining how we structure and analyze connections. In this session, we’ll dive into the basics of Neo4j, explore a real-world comparison between SQL and graph approaches, and explore how Neo4j supports Generative AI."
   speakers:
     -
       name: "Sathishkumar Madhanagopal"
