Ram | Update. 101st edition Talk details

--- a/content/2024-11.html
+++ b/content/2024-11.html
@@ -10,7 +10,7 @@ agenda:
   title: "Registrations"
 -
   time: "6:00"
-  title: "What to test in Integration Tests"
+  title: "Integration Tests - How to do them right?"
   video_link: "https://www.youtube.com/watch?v=RuL8PSkg9ew&list=PLH8WPOo4hnqwpZNqV_s_uF5FwJA_vy83p"
   subtitle: "Get to know what you should be testing in Integration tests of your backend applications to avoid duplicating scenarios and slowness in your test suite."
   speakers:
