Ram | Update. 103rd edition speaker details

--- a/content/2025-01.html
+++ b/content/2025-01.html
@@ -10,14 +10,14 @@ agenda:
   title: "Registrations"
 -
   time: "6:00"
-  title: "LLM's from 1930 to 2025"
+  title: "Bank Statement Extraction with OCR and Multimodal"
   video_link: "https://www.youtube.com/watch?v=9tFNDtMdOcw&list=PLH8WPOo4hnqw-utUEnVVWJ3ld5Ce5XtnJ"
-  subtitle: "Timeline view of how LLM's evolved"
+  subtitle: "Extracting structured data (like tables in pdf) from bank statements is a critical yet challenging task in the financial sector due to varying formats, tabular complexities, and low-quality inputs. This talk explores cutting-edge methods combining Optical Character Recognition (OCR) with multimodal for accurate data extraction. "
   speakers:
     -
-      name: "Aravind Chandra Sekaran"
-      image: "Aravind-Chandra-Sekaran.png"
-      description: "Application Developer from Thoughtworks"
+      name: "Samvardhan V G"
+      image: "Samvardhan-V-G.png"
+      description: "Data Engineer at Thoughtworks"
 -
   time: "6:45"
   title: "Break"
