Ram | Update. 103rd edition speaker details

--- a/content/2025-01.html
+++ b/content/2025-01.html
@@ -10,14 +10,14 @@ agenda:
   title: "Registrations"
 -
   time: "6:00"
-  title: "Bank Statement Extraction with OCR and Multimodal"
+  title: "Layered Architecture Pattern"
   video_link: "https://www.youtube.com/watch?v=9tFNDtMdOcw&list=PLH8WPOo4hnqw-utUEnVVWJ3ld5Ce5XtnJ"
-  subtitle: "Extracting structured data (like tables in pdf) from bank statements is a critical yet challenging task in the financial sector due to varying formats, tabular complexities, and low-quality inputs. This talk explores cutting-edge methods combining Optical Character Recognition (OCR) with multimodal for accurate data extraction. "
+  subtitle: "In this session, we will explore how to structure code in domain services (backend) using the Layered Architecture Pattern for managing complexity better."
   speakers:
     -
-      name: "Samvardhan V G"
-      image: "Samvardhan-V-G.png"
-      description: "Data Engineer at Thoughtworks"
+      name: "Sayeed Munawar Hussain"
+      image: "Sayeed-Munawar-Hussain.png"
+      description: "Developer with 14 yrs of experience"
 -
   time: "6:45"
   title: "Break"
