Ram | Update. 103rd edition talk details

--- a/content/2025-01.html
+++ b/content/2025-01.html
@@ -10,9 +10,9 @@ agenda:
   title: "Registrations"
 -
   time: "6:00"
-  title: "Layered Architecture Pattern"
+  title: "Layered Architecture Pattern: Building Maintainable Domain Services"
   video_link: "https://www.youtube.com/watch?v=9tFNDtMdOcw&list=PLH8WPOo4hnqw-utUEnVVWJ3ld5Ce5XtnJ"
-  subtitle: "In this session, we will explore how to structure code in domain services (backend) using the Layered Architecture Pattern for managing complexity better."
+  subtitle: "The Layered Architecture pattern is a fundamental approach to structuring software systems, offering clear separation of concerns and improved maintainability. In this session, we'll explore its core principles, best practices, examples. We'll break down common layers—Presentation, Application, Domain, and Infrastructure—discuss their roles, and examine how to avoid common pitfalls like tight coupling. Whether you're designing a new system or refactoring an existing one, this talk will provide actionable insights to help you build scalable, testable, and robust applications."
   speakers:
     -
       name: "Sayeed Munawar Hussain"
