Ram | Update. 103rd edition speaker details

--- a/content/2025-01.html
+++ b/content/2025-01.html
@@ -29,6 +29,7 @@ agenda:
   speakers:
     -
       name: "Arun Kumar Kumaraswamy"
+      image: "Arun.jpg"
       description: "QA professional with 9+ yrs of experience in Automation and Manual Testing. Currently working as Lead SDET in Freshworks with Bots and AI. Proud Alumni of ThoughtWorks as well."
 -
   time: "08:00"
