--- a/content/2025-03.html
+++ b/content/2025-03.html
@@ -12,7 +12,7 @@ agenda:
   time: "6:00"
   title: "Data Transformations with DBT"
   video_link: "https://www.youtube.com/watch?v=X3pEP5l5fwM&list=PLH8WPOo4hnqyce1AXRnf67VT0iBBKFnI2&index=3"
-  subtitle: "Mostly related to how DBT tool is used to transform data in cloud along with some use cases where DBT is best suitable"
+  subtitle: "An overview of ETL data pipelines followed by an in-depth exploration of DBT (Data Build Tool). Learn about its features, core components, architecture, and configurations. Discover how DBT optimizes data transformation workflows and explore its best-fit use cases."
   speakers:
     -
       name: "Booma R"
@@ -24,6 +24,7 @@ agenda:
   time: "07:00"
   title: 'Killswitch for AWS network traffic from github actions'
   video_link: "https://www.youtube.com/watch?v=cuAXCvbBKHE&list=PLH8WPOo4hnqyce1AXRnf67VT0iBBKFnI2&index=2"
+  subtitle: "Learn how to implement a network traffic killswitch using GitHub Actions for applications deployed in AWS VPC. This session will demonstrate a practical approach to network traffic control through automated workflows."
   speakers:
     -
       name: "Srilalitha S"
