--- a/content/2025-03.html
+++ b/content/2025-03.html
@@ -22,9 +22,9 @@ agenda:
   title: "Break"
 -
   time: "07:00"
-  title: 'Killswitch for AWS network traffic from github actions'
+  title: 'Kill switch for AWS network traffic from GitHub Actions'
   video_link: "https://www.youtube.com/watch?v=cuAXCvbBKHE&list=PLH8WPOo4hnqyce1AXRnf67VT0iBBKFnI2&index=2"
-  subtitle: "Learn how to implement a network traffic killswitch using GitHub Actions for applications deployed in AWS VPC. This session will demonstrate a practical approach to network traffic control through automated workflows."
+  subtitle: "Learn how to implement a network traffic kill switch using GitHub Actions for applications deployed in AWS VPC. This session will demonstrate a practical approach to network traffic control through automated workflows."
   speakers:
     -
       name: "Srilalitha S"
