Ram | Update 106th edition talk details

--- a/content/2025-04.html
+++ b/content/2025-04.html
@@ -25,6 +25,8 @@ agenda:
   time: "07:00"
   title: 'Visual ETL with Mapping Data Flows in Azure Data Factory'
   video_link: "https://www.youtube.com/watch?v=MMW3c9zv7Lg&list=PLH8WPOo4hnqwxiSJWZXpt7SoK8__kkU_c&index=2"
+  subtitle: "Azure Data Factory empowers data engineers to build powerful ETL pipelines visually with minimal coding. We'll dive into Mapping Data Flows, a low-code, scalable feature in ADF that allows you to design, transform, and load data efficiently using an intuitive drag-and-drop interface.
+Through a live demo, we’ll explore how to build a data flow that can help accelerate your data integration projects with ease."
   speakers:
     -
       name: "Antony Prince J"
