Ram | Update 107th edition speaker details

--- a/content/2025-06.html
+++ b/content/2025-06.html
@@ -28,6 +28,7 @@ agenda:
   speakers:
     -
       name: "Ramachandran R"
+      profile: "https://ramc.dev"
       image: "Ramachandran-R.png"
 -
   time: "08:00"
